2005-02-02  Martin Blom  <martin@blom.org>

	* Updated all copyright years to 2005.

	* Bumped all version numbers to 6.0.

	* Docs/ahidev.texinfo (The Author): Updated the authors address (5
	years later).

	* Added updated/new italian translations by Paolo Besser. Thanks!

	* AHI preferences: Update the strings in the unit cycle gadget
	when loading new prefs from disk or restoring to the
	defaults. [Gunther Nikl]

2005-01-28  Martin Blom  <martin@blom.org>

	* Updated the docs and .readme files a bit.

2005-01-23  Martin Blom  <martin@blom.org>

	* ahi.device: That CPU overload protection (PreTimer/PostTimer)
	thing didn't work ... at all. Duh. [Gunther Nikl]

2005-01-14  Martin Blom  <martin@blom.org>

	* Updated the README files. The language source files are now
	included in the ahidev archive.

2005-01-13  Martin Blom  <martin@blom.org>

	* AHI preferences: Localized the anti-click time and CPU load
	values as well. [Michael Malyshev]

	* Added updated Russion translations by Michael Malyshev. Thanks!

2005-01-12  Martin Blom  <martin@blom.org>

	* The binary user archive now includes the .ct files for easy
	translation updates.

	* Updated to FlexCat 2.6.6-cvs-2005-01-12 and regenerated language
	files.

	* Released AHI preferences 5.15.

	* Released ahi.device 5.56.

	* Added 'FILL' switch to FlexCat when generating the catalogs in
	order to make missing strings use the built-in English defaults
	instead of nothing. [Pierre Giroux]

	* Localized Hz, dB and the number of channels. [Michael Malyshev]

	* Only try to build emu10kx.audio for AROS if <asm/io.h> is found.

2005-01-11  Martin Blom  <martin@blom.org>

	* filesave.audio: Fixed a compiler warning. (No bumprev.) [Gunther
	Nikl]

	* AHI preferences: Used floating point instruction introduced by
	the -m68020-60 switch by accident. Added -msoft-float for m68k to
	prevent this. [Gunther Nikl]

	* ahi.device: Tweaked the m68k gateway stubs so no nops are used
	anymore. [Gunther Nikl]
 